--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyyaml = "^6.0.1"
 ipython = "^8.20.0"
 langchain = "^0.1.1"
 langchain-community = "^0.0.13"
+transformers = "^4.36.2"
 
 
 [tool.poetry.group.dev.dependencies]
