--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ ipython = "^8.20.0"
 langchain = "^0.1.1"
 langchain-community = "^0.0.13"
 transformers = "^4.36.2"
+pypdf = "^4.0.0"
+nltk = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
