--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ langchain-community = "^0.0.13"
 transformers = "^4.36.2"
 pypdf = "^4.0.0"
 nltk = "^3.8.1"
+atlassian-python-api = "^3.41.9"
+lxml = "^5.1.0"
+pytesseract = "^0.3.10"
+pdf2image = "^1.17.0"
 
 
 [tool.poetry.group.dev.dependencies]
